--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,22 +19,135 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-fk-EpA">
-                                <rect key="frame" x="166" y="94" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-fk-EpA">
+                                <rect key="frame" x="143" y="289.66666666666669" width="128" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VB9-O7-z6v">
+                                <rect key="frame" x="143" y="390.66666666666669" width="128" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lk8-TG-cp1">
+                                <rect key="frame" x="143" y="251.66666666666669" width="128" height="30.000000000000057"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eyi-cc-m5W">
+                                <rect key="frame" x="182.66666666666666" y="482.66666666666663" width="49" height="29.999999999999886"/>
+                                <state key="normal" title="Submit"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XS4-av-TcI">
+                                <rect key="frame" x="143" y="353" width="128" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="centerX" secondItem="Lk8-TG-cp1" secondAttribute="centerX" id="9me-rY-DZl"/>
+                            <constraint firstItem="VB9-O7-z6v" firstAttribute="width" secondItem="XS4-av-TcI" secondAttribute="width" id="F0w-DT-ZhX"/>
+                            <constraint firstItem="vuh-fk-EpA" firstAttribute="width" secondItem="Lk8-TG-cp1" secondAttribute="width" id="FqL-6H-a53"/>
+                            <constraint firstItem="VB9-O7-z6v" firstAttribute="leading" secondItem="XS4-av-TcI" secondAttribute="leading" id="J4j-FF-wKU"/>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="top" secondItem="Lk8-TG-cp1" secondAttribute="bottom" constant="71.5" id="QaA-Gg-wHN"/>
+                            <constraint firstItem="vuh-fk-EpA" firstAttribute="top" secondItem="Lk8-TG-cp1" secondAttribute="bottom" constant="8" id="R6d-X7-634"/>
+                            <constraint firstItem="vuh-fk-EpA" firstAttribute="leading" secondItem="Lk8-TG-cp1" secondAttribute="leading" id="Rfr-R0-nCk"/>
+                            <constraint firstItem="VB9-O7-z6v" firstAttribute="top" secondItem="XS4-av-TcI" secondAttribute="bottom" constant="7.5" id="ZDr-Y6-JmH"/>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="width" secondItem="Lk8-TG-cp1" secondAttribute="width" id="Zs2-dR-hez"/>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="jV7-E8-rQF"/>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nHX-lB-foD"/>
+                            <constraint firstItem="Eyi-cc-m5W" firstAttribute="centerX" secondItem="XS4-av-TcI" secondAttribute="centerX" id="ohZ-2O-q0m"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XS4-av-TcI" secondAttribute="trailing" constant="123" id="otZ-Ff-iVF"/>
+                            <constraint firstItem="Eyi-cc-m5W" firstAttribute="top" secondItem="XS4-av-TcI" secondAttribute="bottom" constant="99.5" id="vRF-Om-sF4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="vuh-fk-EpA"/>
+                                <exclude reference="VB9-O7-z6v"/>
+                                <exclude reference="Lk8-TG-cp1"/>
+                                <exclude reference="Eyi-cc-m5W"/>
+                                <exclude reference="XS4-av-TcI"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="FqL-6H-a53"/>
+                                <exclude reference="R6d-X7-634"/>
+                                <exclude reference="Rfr-R0-nCk"/>
+                                <exclude reference="9me-rY-DZl"/>
+                                <exclude reference="QaA-Gg-wHN"/>
+                                <exclude reference="Zs2-dR-hez"/>
+                                <exclude reference="jV7-E8-rQF"/>
+                                <exclude reference="nHX-lB-foD"/>
+                                <exclude reference="otZ-Ff-iVF"/>
+                                <exclude reference="F0w-DT-ZhX"/>
+                                <exclude reference="J4j-FF-wKU"/>
+                                <exclude reference="ZDr-Y6-JmH"/>
+                                <exclude reference="ohZ-2O-q0m"/>
+                                <exclude reference="vRF-Om-sF4"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="vuh-fk-EpA"/>
+                                <include reference="VB9-O7-z6v"/>
+                                <include reference="Lk8-TG-cp1"/>
+                                <include reference="Eyi-cc-m5W"/>
+                                <include reference="XS4-av-TcI"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="FqL-6H-a53"/>
+                                <include reference="R6d-X7-634"/>
+                                <include reference="Rfr-R0-nCk"/>
+                                <include reference="9me-rY-DZl"/>
+                                <include reference="QaA-Gg-wHN"/>
+                                <include reference="Zs2-dR-hez"/>
+                                <include reference="jV7-E8-rQF"/>
+                                <include reference="nHX-lB-foD"/>
+                                <include reference="otZ-Ff-iVF"/>
+                                <include reference="F0w-DT-ZhX"/>
+                                <include reference="J4j-FF-wKU"/>
+                                <include reference="ZDr-Y6-JmH"/>
+                                <include reference="ohZ-2O-q0m"/>
+                                <include reference="vRF-Om-sF4"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="vuh-fk-EpA"/>
+                                <include reference="VB9-O7-z6v"/>
+                                <include reference="Lk8-TG-cp1"/>
+                                <include reference="Eyi-cc-m5W"/>
+                                <include reference="XS4-av-TcI"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="FqL-6H-a53"/>
+                                <include reference="R6d-X7-634"/>
+                                <include reference="Rfr-R0-nCk"/>
+                                <include reference="9me-rY-DZl"/>
+                                <include reference="QaA-Gg-wHN"/>
+                                <include reference="Zs2-dR-hez"/>
+                                <include reference="jV7-E8-rQF"/>
+                                <include reference="nHX-lB-foD"/>
+                                <include reference="otZ-Ff-iVF"/>
+                                <include reference="F0w-DT-ZhX"/>
+                                <include reference="J4j-FF-wKU"/>
+                                <include reference="ZDr-Y6-JmH"/>
+                                <include reference="ohZ-2O-q0m"/>
+                                <include reference="vRF-Om-sF4"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
