--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -148,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="164" y="443"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="grS-Hc-Lhf">
@@ -246,6 +247,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BGw-sY-Dcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="827.536231884058" y="136.95652173913044"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JSe-rn-JUL">
+            <objects>
+                <viewController id="ufv-Nf-glt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kul-f7-VCZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="zBe-SN-6ji"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QIb-yM-Nhb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lectures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4U-fI-h3g">
+                                <rect key="frame" x="157.33333333333337" y="28.000000000000004" width="99.666666666666629" height="31.333333333333339"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="k4U-fI-h3g" firstAttribute="top" secondItem="kul-f7-VCZ" secondAttribute="bottom" constant="8" id="KWb-fz-ooJ"/>
+                            <constraint firstItem="k4U-fI-h3g" firstAttribute="centerX" secondItem="QIb-yM-Nhb" secondAttribute="centerX" id="v73-KB-dZP"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="k4U-fI-h3g"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="KWb-fz-ooJ"/>
+                                <exclude reference="v73-KB-dZP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="k4U-fI-h3g"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="KWb-fz-ooJ"/>
+                                <include reference="v73-KB-dZP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="k4U-fI-h3g"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="KWb-fz-ooJ"/>
+                                <include reference="v73-KB-dZP"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="udn-lu-foc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="828.98550724637687" y="796.46739130434787"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="5Lz-ZP-23m">
@@ -356,8 +414,8 @@
                                 <exclude reference="MEg-rm-jxQ"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="ofv-5k-dOe"/>
                                 <exclude reference="FNM-2M-rhT"/>
+                                <exclude reference="ofv-5k-dOe"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
@@ -365,8 +423,8 @@
                                 <include reference="MEg-rm-jxQ"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="ofv-5k-dOe"/>
                                 <include reference="FNM-2M-rhT"/>
+                                <include reference="ofv-5k-dOe"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -374,8 +432,8 @@
                                 <include reference="MEg-rm-jxQ"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="ofv-5k-dOe"/>
                                 <include reference="FNM-2M-rhT"/>
+                                <include reference="ofv-5k-dOe"/>
                             </mask>
                         </variation>
                     </view>
