Added Session Status view controller (minus main icon) including constraints.

--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -641,6 +641,163 @@
             <point key="canvasLocation" x="1495.6521739130435" y="795.6521739130435"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="MkB-yA-uzh">
+            <objects>
+                <viewController id="9xR-Xk-1pM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Tcr-G2-z7V"/>
+                        <viewControllerLayoutGuide type="bottom" id="lvc-tv-bm4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KZ8-t3-bLN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNZ-Fx-ONu">
+                                <rect key="frame" x="111.66666666666669" y="28" width="190.66666666666663" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ceH-ta-EXD">
+                                <rect key="frame" x="191" y="698" width="32" height="30"/>
+                                <state key="normal" title="Next"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="abc123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-U0-7ll">
+                                <rect key="frame" x="179" y="637" width="56" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sc-53-QqN">
+                                <rect key="frame" x="167" y="608" width="80.333333333333343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDI-Th-5Gt">
+                                <rect key="frame" x="169.33333333333334" y="478" width="75.333333333333314" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SC9-bp-fIm">
+                                <rect key="frame" x="20" y="103" width="49.333333333333329" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5sU-Xq-Ohq">
+                                <rect key="frame" x="20" y="142" width="69.666666666666671" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ksS-U0-7ll" firstAttribute="centerX" secondItem="9sc-53-QqN" secondAttribute="centerX" id="7TU-c2-Fce"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="SC9-bp-fIm" secondAttribute="leading" id="7eL-Ve-WSF"/>
+                            <constraint firstItem="aDI-Th-5Gt" firstAttribute="top" secondItem="oNZ-Fx-ONu" secondAttribute="bottom" constant="414" id="D6W-6W-Vwi"/>
+                            <constraint firstItem="9sc-53-QqN" firstAttribute="top" secondItem="aDI-Th-5Gt" secondAttribute="bottom" constant="109" id="DfX-My-VC3"/>
+                            <constraint firstItem="SC9-bp-fIm" firstAttribute="top" secondItem="oNZ-Fx-ONu" secondAttribute="bottom" constant="39" id="GbK-M7-qBF"/>
+                            <constraint firstItem="9sc-53-QqN" firstAttribute="centerX" secondItem="aDI-Th-5Gt" secondAttribute="centerX" id="OsH-g7-Rqh"/>
+                            <constraint firstItem="aDI-Th-5Gt" firstAttribute="centerX" secondItem="KZ8-t3-bLN" secondAttribute="centerX" id="Y2g-bz-AYH"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="5sU-Xq-Ohq" secondAttribute="leading" id="b8D-CZ-5lG"/>
+                            <constraint firstItem="5sU-Xq-Ohq" firstAttribute="top" secondItem="SC9-bp-fIm" secondAttribute="bottom" constant="18" id="e4I-A6-rFO"/>
+                            <constraint firstItem="ksS-U0-7ll" firstAttribute="top" secondItem="9sc-53-QqN" secondAttribute="bottom" constant="8" id="eZb-JE-mkH"/>
+                            <constraint firstItem="oNZ-Fx-ONu" firstAttribute="centerX" secondItem="KZ8-t3-bLN" secondAttribute="centerX" id="j2L-UE-Nh4"/>
+                            <constraint firstItem="oNZ-Fx-ONu" firstAttribute="top" secondItem="Tcr-G2-z7V" secondAttribute="bottom" constant="8" id="ooL-Fh-w7u"/>
+                            <constraint firstItem="ceH-ta-EXD" firstAttribute="centerX" secondItem="KZ8-t3-bLN" secondAttribute="centerX" id="vqb-zq-3EM"/>
+                            <constraint firstItem="lvc-tv-bm4" firstAttribute="top" secondItem="ceH-ta-EXD" secondAttribute="bottom" constant="8" id="zkX-ap-zkR"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="oNZ-Fx-ONu"/>
+                                <exclude reference="ceH-ta-EXD"/>
+                                <exclude reference="ksS-U0-7ll"/>
+                                <exclude reference="9sc-53-QqN"/>
+                                <exclude reference="aDI-Th-5Gt"/>
+                                <exclude reference="SC9-bp-fIm"/>
+                                <exclude reference="5sU-Xq-Ohq"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="7eL-Ve-WSF"/>
+                                <exclude reference="GbK-M7-qBF"/>
+                                <exclude reference="j2L-UE-Nh4"/>
+                                <exclude reference="ooL-Fh-w7u"/>
+                                <exclude reference="b8D-CZ-5lG"/>
+                                <exclude reference="e4I-A6-rFO"/>
+                                <exclude reference="D6W-6W-Vwi"/>
+                                <exclude reference="Y2g-bz-AYH"/>
+                                <exclude reference="DfX-My-VC3"/>
+                                <exclude reference="OsH-g7-Rqh"/>
+                                <exclude reference="7TU-c2-Fce"/>
+                                <exclude reference="eZb-JE-mkH"/>
+                                <exclude reference="vqb-zq-3EM"/>
+                                <exclude reference="zkX-ap-zkR"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="oNZ-Fx-ONu"/>
+                                <include reference="ceH-ta-EXD"/>
+                                <include reference="ksS-U0-7ll"/>
+                                <include reference="9sc-53-QqN"/>
+                                <include reference="aDI-Th-5Gt"/>
+                                <include reference="SC9-bp-fIm"/>
+                                <include reference="5sU-Xq-Ohq"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="7eL-Ve-WSF"/>
+                                <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
+                                <include reference="b8D-CZ-5lG"/>
+                                <include reference="e4I-A6-rFO"/>
+                                <include reference="D6W-6W-Vwi"/>
+                                <include reference="Y2g-bz-AYH"/>
+                                <include reference="DfX-My-VC3"/>
+                                <include reference="OsH-g7-Rqh"/>
+                                <include reference="7TU-c2-Fce"/>
+                                <include reference="eZb-JE-mkH"/>
+                                <include reference="vqb-zq-3EM"/>
+                                <include reference="zkX-ap-zkR"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="oNZ-Fx-ONu"/>
+                                <include reference="ceH-ta-EXD"/>
+                                <include reference="ksS-U0-7ll"/>
+                                <include reference="9sc-53-QqN"/>
+                                <include reference="aDI-Th-5Gt"/>
+                                <include reference="SC9-bp-fIm"/>
+                                <include reference="5sU-Xq-Ohq"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="7eL-Ve-WSF"/>
+                                <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
+                                <include reference="b8D-CZ-5lG"/>
+                                <include reference="e4I-A6-rFO"/>
+                                <include reference="D6W-6W-Vwi"/>
+                                <include reference="Y2g-bz-AYH"/>
+                                <include reference="DfX-My-VC3"/>
+                                <include reference="OsH-g7-Rqh"/>
+                                <include reference="7TU-c2-Fce"/>
+                                <include reference="eZb-JE-mkH"/>
+                                <include reference="vqb-zq-3EM"/>
+                                <include reference="zkX-ap-zkR"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nsv-ON-5Sh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2160.8695652173915" y="793.20652173913049"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="5Lz-ZP-23m">
             <objects>
                 <viewController id="FFr-B7-ubx" sceneMemberID="viewController">
