--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -798,6 +798,61 @@
             <point key="canvasLocation" x="2160.8695652173915" y="793.20652173913049"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="fjn-1z-KAf">
+            <objects>
+                <viewController id="bF1-AN-DLT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Lyt-gk-04t"/>
+                        <viewControllerLayoutGuide type="bottom" id="sea-ga-dUq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="G6N-MZ-XQl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHy-Vc-WrH">
+                                <rect key="frame" x="186.66666666666666" y="686" width="41" height="30"/>
+                                <state key="normal" title="Home"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sea-ga-dUq" firstAttribute="top" secondItem="gHy-Vc-WrH" secondAttribute="bottom" constant="20" id="a5Z-iK-MNB"/>
+                            <constraint firstItem="gHy-Vc-WrH" firstAttribute="centerX" secondItem="G6N-MZ-XQl" secondAttribute="centerX" id="whs-fb-rA2"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gHy-Vc-WrH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="whs-fb-rA2"/>
+                                <exclude reference="a5Z-iK-MNB"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="gHy-Vc-WrH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="whs-fb-rA2"/>
+                                <include reference="a5Z-iK-MNB"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gHy-Vc-WrH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="whs-fb-rA2"/>
+                                <include reference="a5Z-iK-MNB"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fHo-hu-pid" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2845" y="792"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="5Lz-ZP-23m">
             <objects>
                 <viewController id="FFr-B7-ubx" sceneMemberID="viewController">
